# miniffi

./: Cargo.toml  LICENSE.md  README.md
src/: ast.rs  cpp.rs  lib.rs  rust.rs  scan.rs  swift.rs  util.rs  wasm.rs
src/tests/: cpp.rs  mod.rs  swift.rs  warnings.rs  wasm.rs
src/tests/cases/: demo_app.rs  demo_const.rs  demo_derive_eq.rs  demo_enum.rs  demo_keyword.rs  demo_order.rs  demo_trait.rs  fn_basic.rs  fn_basic_void.rs  fn_box_in.rs  fn_box_out.rs  fn_combo_in.rs  fn_combo_out.rs  fn_enum_in.rs  fn_enum_out.rs  fn_nested_in.rs  fn_nested_out.rs  fn_option_in.rs  fn_option_out.rs  fn_payload_in.rs  fn_payload_out.rs  fn_string.rs  fn_struct_in.rs  fn_struct_out.rs  fn_tuple_in.rs  fn_tuple_out.rs  fn_vec_in.rs  fn_vec_out.rs  mod.rs  trait_enum.rs  trait_export.rs  trait_export_import.rs  trait_export_nested.rs  trait_import.rs  trait_import_export.rs  trait_import_nested.rs  trait_import_struct_in.rs  trait_import_tuple_in.rs  trait_string.rs
src/tests/snapshots/cpp_demo_app/: ffi.h  miniffi.rs
src/tests/snapshots/cpp_demo_app_2021/: miniffi.rs
src/tests/snapshots/cpp_demo_app_2024/: ffi.cpp
src/tests/snapshots/cpp_demo_const/: ffi.h
src/tests/snapshots/cpp_demo_derive_eq/: ffi.cpp  miniffi.rs
src/tests/snapshots/cpp_demo_derive_eq_2021/: ffi.h  miniffi.rs
src/tests/snapshots/cpp_demo_enum_2021/: ffi.cpp  ffi.h
src/tests/snapshots/cpp_demo_keyword/: ffi.h  miniffi.rs
src/tests/snapshots/cpp_demo_keyword_2021/: ffi.cpp  miniffi.rs
src/tests/snapshots/cpp_demo_order_2024/: ffi.h
src/tests/snapshots/cpp_demo_trait/: miniffi.rs
(+481 files in other folders)
